src/test/ui/tuple/tuple-struct-nonexhaustive.stderr
error[E0004]: non-exhaustive patterns: `Foo(_, _)` not covered
  --> $DIR/tuple-struct-nonexhaustive.rs:15:11
   |
LL |     match x {   //~ ERROR non-exhaustive
   |           ^ pattern `Foo(_, _)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
